--- a/0.css
+++ b/0.css
@@ -424,108 +424,61 @@ th {
   padding: 0;
 }
 
-html {
-  font-size: 62.5%; }
+/*
+* Skeleton V2.0.4
+* Copyright 2014, Dave Gamache
+* www.getskeleton.com
+* Free to use under the MIT license.
+* http://www.opensource.org/licenses/mit-license.php
+* 12/29/2014
+*/
 
-body {
-  font-size: 1.5rem;
-  line-height: 1.6;
-  font-weight: 400;
-  font-family: 'Roboto', sans-serif;
-  color: rgba(0,0,0,.7);
-}
-.fullStack {
-  text-decoration: underline;
-  text-decoration-color: yellow;
-}
-#menu{
-  padding: 2% 0 2% 0;
-}
-.navbar-list{
-  list-style: none;
-  margin-bottom: 0;
-}
-.navbar-item{
-  position: relative;
-  float: left;
-  margin-bottom: 0;
-  height: 40px;
-}
-.navbar-link{
-  margin-right: 35px;
-  font-size: 1.1rem;
-  text-transform: uppercase;
-  letter-spacing: 0.2rem;
-  font-weight: 300;
-  color:#969696;
-  transition: color 0.25s ease;
-  -moz-transition: color .25s ease;
-  -webkit-transition: color .25s ease;
-}
 
-.navbar-link:hover{
-  margin-right: 35px;
-  font-size: 1.1rem;
-  letter-spacing: 0.2px;
-  text-transform: uppercase;
-  letter-spacing: 0.2rem;
-  font-weight: 300;
-  color:#333333;
-  transition: color 0.25s ease;
-  -moz-transition: color .25s ease;
-  -webkit-transition: color .25s ease;
-}
+/* Table of contents
+â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“
+- Grid
+- Base Styles
+- Typography
+- Links
+- Buttons
+- Forms
+- Lists
+- Code
+- Tables
+- Spacing
+- Utilities
+- Clearing
+- Media Queries
+*/
 
-.navbar-link-active{
-  margin-right: 35px;
-  font-size: 1.1rem;
-  letter-spacing: 0.5px;
-  text-transform: uppercase;
-  letter-spacing: 0.2rem;
-  font-weight: 500;
-  color: #FFF;
-  background-color: #2963ff;
-  border-radius: 16px;
-  padding: 10px 20px 10px 20px;
-  box-shadow: 0 5px 20px rgba(41, 99, 255, 0.30);
 
-}
+/* Grid
+â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“ */
+
+
+
 .container {
   position: relative;
   width: 100%;
   max-width: 960px;
   margin: 0 auto;
   padding: 0 20px;
-  box-sizing: border-box;
-}
-.header {
-  text-align: left;
-}
-.header p{
-  font-size: 9rem;
-  font-weight: 700;
-  line-height: 8.5rem;
-  font-family: 'roboto', monospace;
-}
+  box-sizing: border-box; }
 
-/* phone  */
-@media (max-width: 550px) {
 
-  .header p{
-    font-size: 6rem;
-    font-weight: 700;
-    line-height: 6rem;
-    font-family: 'roboto', monospace;
-  }
+.column,
+.columns {
+  width: 100%;
+  float: left;
+  box-sizing: border-box; }
 
-}
 /* For devices larger than 400px */
 @media (min-width: 400px) {
   .container {
     width: 90%;
-    padding: 0;
-  }
+    padding: 0; }
 }
+
 /* For devices larger than 550px */
 @media (min-width: 550px) {
   .container {
@@ -590,19 +543,707 @@ body {
   .offset-by-one-half.columns     { margin-left: 52%; }
 
 }
-.mainHeading {
+
+
+/* Base Styles
+â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“ */
+/* NOTE
+html is set to 62.5% so that all the REM measurements throughout Skeleton
+are based on 10px sizing. So basically 1.5rem = 15px :) */
+html {
+  font-size: 62.5%; }
+
+body {
+  font-size: 1.5rem;
+  line-height: 1.6;
+  font-weight: 400;
   font-family: 'Roboto', sans-serif;
-  color: rgb(76,76,76);
-  font-size: 6rem;
-  font-weight: 700;
-  line-height:  8.5rem;
+  color: rgba(0,0,0,.7);
+
+}
+
+.logo{
+  margin: 0 0 15px 0;
+}
+
+logo img:hover{
+  text-decoration: none;
+}
+
+
+.header{
+  text-align: left;
+}
+
+.header img{
+  margin-top: 5%;
+
+}
+
+.header img a{
+  text-decoration: none;
+}
+
+a img{
+  box-shadow: 0 12px 65px 2px rgba(41,99,255,0), 0 1px 2px 1px rgba(41,99,255,0);
   transition: box-shadow .25s ease-in;
   -moz-transition: box-shadow .25s ease-in;
   -webkit-transition: box-shadow .25s ease-in;
 }
-.mainHeading:hover {
+
+a img:hover{
   box-shadow: 0 12px 65px 2px rgba(41,99,255,0.30), 0 1px 2px 1px rgba(41,99,255,0.09);
+
 }
+
+.header p{
+  font-size: 9rem;
+  font-weight: 700;
+  line-height: 8.5rem;
+  font-family: 'roboto', monospace;
+}
+
+
+
+.home-feature-container{
+  padding: 4% 4% 4% 0;
+
+}
+
+.home-feature-container-onecolumn{
+  padding: 4% 0% 4% 0;
+}
+
+.home-feature-container img{
+  max-width: 100%;
+
+
+}
+
+.home-feature-container-onecolumn img{
+  max-width: 100%;
+
+
+}
+
+.header a{
+  color: #2963ff;
+  font-weight: 700;
+  text-decoration: none;
+}
+
+
+
+
+.story-title{
+  text-transform:uppercase;
+  font-size: 4rem;
+  font-weight:400;
+  line-height: 1.2;
+  letter-spacing: 0rem;
+}
+
+.story-footer{
+  text-align: center;
+  border-top: 1px solid #e6e6e6;
+  margin-top: 10%;
+}
+
+.story-footer p{
+  font-size: 1.4rem;
+  color:#969696;
+  padding: 5% 0 0 0;
+  text-transform: uppercase;
+}
+
+
+#menu{
+  padding: 2% 0 2% 0;
+
+}
+
+#article{
+  margin: 8% 0 8% 0;
+}
+
+#home-entries{
+  margin: 6% 0 6% 0;
+}
+
+
+
+.navbar-list{
+  list-style: none;
+  margin-bottom: 0;
+}
+
+.navbar-item{
+  position: relative;
+  float: left;
+  margin-bottom: 0;
+  height: 40px;
+}
+
+.navbar-link{
+  margin-right: 35px;
+  font-size: 1.1rem;
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+  font-weight: 300;
+  color:#969696;
+  transition: color 0.25s ease;
+  -moz-transition: color .25s ease;
+  -webkit-transition: color .25s ease;
+}
+
+.navbar-link:hover{
+  margin-right: 35px;
+  font-size: 1.1rem;
+  letter-spacing: 0.2px;
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+  font-weight: 300;
+  color:#333333;
+  transition: color 0.25s ease;
+  -moz-transition: color .25s ease;
+  -webkit-transition: color .25s ease;
+}
+
+.navbar-link-active{
+  margin-right: 35px;
+  font-size: 1.1rem;
+  letter-spacing: 0.5px;
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+  font-weight: 500;
+  color: #FFF;
+  background-color: #2963ff;
+  border-radius: 16px;
+  padding: 10px 20px 10px 20px;
+  box-shadow: 0 5px 20px rgba(41, 99, 255, 0.30);
+
+}
+
+.social{
+  text-decoration: underline;
+}
+
+.desc{
+  font-style: italic;
+  font-size: 1.1rem;
+  color:#B4B4B4;
+}
+
+.desc-story{
+  font-size: 1.2rem;
+  color: #B4B4B4;
+  padding: 0 0 5% 0;
+  font-family: 'roboto mono', monospace;
+}
+
+.desc-story a{
+  color:#B4B4B4;
+  text-decoration: underline;
+}
+
+.desc a{
+  color:#B4B4B4;
+  text-decoration: underline;
+}
+
+
+.writings-subtext{
+  font-size: 1.5rem;
+  margin-top: 0.4rem;
+  color:#969696;
+  margin-bottom: 2%;
+  font-family: 'roboto mono', monospace;
+}
+
+
+
+/* POTOGRAPHY related
+â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“ */
+
+.cover-image{
+  margin: 0 auto;
+  padding: none;
+}
+
+.cover-image img{
+  width: 100%;
+  top:0; left:0;
+}
+
+
+.photo-set-title {
+  text-decoration: none;
+  color: #5A5A5A;
+  font-size: 1.7rem;
+  font-weight: 400;
+  font-family: 'roboto mono', monospace;
+}
+
+#photography-cover{
+  margin: 1% 2% 0% 0%;
+  text-align: center;
+}
+
+#photography-cover img{
+  max-width: 100%;
+}
+
+.photo-date{
+  font-size: 1.1rem;
+  color: #969696;
+}
+
+
+.photo-container {
+  margin-bottom: 2%;
+  margin-top: 8%;
+}
+
+.photo-container img{
+  max-width: 100%;
+
+
+}
+
+.photo-container:hover img{
+
+}
+
+.photo-story-container p{
+  text-align: center;
+  padding: 3% 0 3% 0;
+}
+
+.photo-breadcrumbs{
+  display: inline;
+  margin-bottom: 10%
+}
+
+.photo-breadcrumbs-one a{
+  color: #969696;
+  font-size: 1.3rem;
+  font-weight: 300;
+  text-decoration: none;
+  font-family: 'roboto mono', monospace;
+}
+
+.photo-breadcrumbs-two{
+  font-size: 2.5rem;
+  font-weight: 300;
+  text-decoration: none;
+  font-family: 'roboto mono', monospace;
+}
+
+/* VIDEO related
+â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“ */
+
+video{
+  width:100%;
+}
+
+.video-container{
+  width: 100%;
+  margin: auto;
+  padding: 0 0 10% 0;
+
+}
+
+.video-container-400{
+  max-width: 400px;
+  margin: auto;
+}
+
+.video-container-360{
+  max-width: 360px;
+  margin: auto;
+}
+
+.video-container-682{
+  max-width: 682px;
+  margin: auto;
+}
+
+.video-container-644{
+  max-width: 682px;
+  margin: auto;
+}
+
+
+/* PORTOFLIO related
+â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“ */
+
+
+.work-breadcrumbs{
+  display: inline;
+  margin-bottom: 10%
+}
+
+.work-breadcrumbs-one a{
+  color: #969696;
+  font-size: 1.3rem;
+  font-weight: 300;
+  text-decoration: none;
+  font-family: 'roboto mono', monospace;
+}
+
+.work-breadcrumbs-two{
+
+  font-size: 2.5rem;
+  font-weight:300;
+  text-decoration: none;
+  font-family: 'roboto mono', monospace;
+}
+
+.portfolio-project-container{
+  text-align: left;
+  padding: 4% 0 4% 0;
+}
+
+.portfolio-project-container p{
+  text-align: left;
+  padding: 3% 0 3% 0;
+}
+
+.portfolio-container{
+  margin-bottom: 20%;
+
+}
+.portfolio-big-container{
+  margin-bottom: 10%;
+
+}
+
+.portfolio-big-container img{
+  max-width: 100%;
+  display: block;
+  margin-bottom: 20px;
+
+
+
+}
+
+.portfolio-container img{
+  max-width: 100%;
+  display: block;
+  margin-bottom: 20px;
+
+
+
+}
+
+.portfolio-set-title {
+  text-decoration: none;
+  color: #5A5A5A;
+  font-size: 1.7rem;
+  font-weight:300;
+  font-family: 'roboto mono', monospace;
+
+}
+
+/* Typography
+â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“ */
+h1, h2, h3, h4, h5, h6 {
+  margin-top: 0;
+}
+h1 { font-weight:300; line-height: 1.2; color: #000; font-family: 'Roboto Mono', monospace; padding-bottom: 30px; margin-top:4%; text-transform: uppercase;}
+h2 { line-height: 1.25; margin-bottom: 2rem; margin-top: 2rem; font-weight: 300; color:#333335; letter-spacing: 0.04rem; font-family: 'Roboto Mono', monospace; }
+h3 { font-size: 2.5rem; line-height: 1.25; margin-bottom: 0rem; margin-top: 2%; font-weight: 400;font-family: 'Roboto Mono', monospace; }
+h4 { font-weight:400; line-height: 1.2; letter-spacing: 0rem;}
+h5 { font-size: 1.4rem; line-height: 1.5; padding: 15% 0 5% 0; color: #969696; margin-bottom: 2rem; font-weight:500; letter-spacing: 0.1rem;}
+h6 { font-family: 'Open Sans', serif; text-transform:uppercase; font-size: 1.5rem; font-weight:600; line-height: 1.2; letter-spacing: 0rem;}
+
+
+/* phone  */
+@media (max-width: 550px) {
+
+  .header p{
+    font-size: 6rem;
+    font-weight: 700;
+    line-height: 6rem;
+    font-family: 'roboto', monospace;
+  }
+
+}
+
+p {
+  margin-top: 0;
+  padding-right:15%;
+  line-height: 3rem}
+
+p a{
+  text-decoration: underline;
+  color: #000;
+}
+
+
+/* Links
+â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“ */
+a{
+  text-decoration: none;
+  color: #222;
+}
+
+
+
+
+/* Buttons
+â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“ */
+
+.button-unsplash, .button-photo-set{
+  float:right;
+  height: 38px;
+  margin: 0% 0% 2% 0%;
+  padding: 0 20px;
+  color: #555;
+  text-align: center;
+  font-size: 10px;
+  font-weight: 600;
+  line-height: 38px;
+  letter-spacing: .1rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  white-space: nowrap;
+  background-color: transparent;
+  border-radius: 0px;
+  border: 1px solid #bbb;
+  cursor: pointer;
+}
+
+.button-unsplash, .button-photo-set:hover{
+  color: #555;
+  border-color: #888;
+  outline: 0;
+}
+
+
+.button,
+button,
+input[type="submit"],
+input[type="reset"],
+input[type="button"] {
+
+  display: inline-block;
+  height: 38px;
+  padding: 0 30px;
+  color: #2963ff;
+  text-align: center;
+  font-size: 1.2rem;
+  font-weight: 600;
+  line-height: 38px;
+  letter-spacing: .1rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  white-space: nowrap;
+  background-color: #FFF;
+  border-radius: 4px;
+  border: 1px solid #2963ff;
+  box-shadow: 0 5px 20px rgba(41, 99, 255, 0);
+  cursor: pointer;
+  box-sizing: border-box;
+  transition: background-color 0.25s ease;
+  -moz-transition: background-color .25s ease;
+  -webkit-transition: background-color .25s ease;
+  transition: color .25s ease;
+  -moz-transition: color .25s ease;
+  -webkit-transition: color .25s ease;
+  transition: box-shadow .25s ease;
+  -moz-transition: box-shadow .25s ease;
+  -webkit-transition: box-shadow .25s ease;
+}
+.button:hover,
+button:hover,
+input[type="submit"]:hover,
+input[type="reset"]:hover,
+input[type="button"]:hover,
+.button:focus,
+button:focus,
+input[type="submit"]:focus,
+input[type="reset"]:focus,
+input[type="button"]:focus {
+  transition: background-color 0.25s ease;
+  -moz-transition: background-color .25s ease;
+  -webkit-transition: background-color .25s ease;
+  color: #FFF;
+  background-color: #2963ff;
+  box-shadow: 0 5px 20px rgba(41, 99, 255, 0.30);
+  outline: 0; }
+.button.button-primary,
+button.button-primary,
+input[type="submit"].button-primary,
+input[type="reset"].button-primary,
+input[type="button"].button-primary {
+  color: #FFF;
+  background-color: #33C3F0;
+  border-color: #33C3F0; }
+.button.button-primary:hover,
+button.button-primary:hover,
+input[type="submit"].button-primary:hover,
+input[type="reset"].button-primary:hover,
+input[type="button"].button-primary:hover,
+.button.button-primary:focus,
+button.button-primary:focus,
+input[type="submit"].button-primary:focus,
+input[type="reset"].button-primary:focus,
+input[type="button"].button-primary:focus {
+  color: #FFF;
+  background-color: #1EAEDB;
+  border-color: #1EAEDB; }
+
+
+/* Forms
+â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“ */
+input[type="email"],
+input[type="number"],
+input[type="search"],
+input[type="text"],
+input[type="tel"],
+input[type="url"],
+input[type="password"],
+textarea,
+select {
+  height: 38px;
+  padding: 6px 10px; /* The 6px vertically centers text on FF, ignored by Webkit */
+  background-color: #fff;
+  border: 1px solid #D1D1D1;
+  border-radius: 4px;
+  box-shadow: none;
+  box-sizing: border-box; }
+/* Removes awkward default styles on some inputs for iOS */
+input[type="email"],
+input[type="number"],
+input[type="search"],
+input[type="text"],
+input[type="tel"],
+input[type="url"],
+input[type="password"],
+textarea {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none; }
+textarea {
+  min-height: 65px;
+  padding-top: 6px;
+  padding-bottom: 6px; }
+input[type="email"]:focus,
+input[type="number"]:focus,
+input[type="search"]:focus,
+input[type="text"]:focus,
+input[type="tel"]:focus,
+input[type="url"]:focus,
+input[type="password"]:focus,
+textarea:focus,
+select:focus {
+  border: 1px solid #33C3F0;
+  outline: 0; }
+label,
+legend {
+  display: block;
+  margin-bottom: .5rem;
+  font-weight: 600; }
+fieldset {
+  padding: 0;
+  border-width: 0; }
+input[type="checkbox"],
+input[type="radio"] {
+  display: inline; }
+label > .label-body {
+  display: inline-block;
+  margin-left: .5rem;
+  font-weight: normal; }
+
+
+/* Lists
+â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“ */
+ul {
+  list-style: circle inside; }
+ol {
+  list-style: decimal inside; }
+ol, ul {
+  padding-left: 0;
+  margin-top: 0; }
+ul ul,
+ul ol,
+ol ol,
+ol ul {
+  margin: 1.5rem 0 1.5rem 3rem;
+  font-size: 90%; }
+li {
+  padding-left: 1rem;
+  margin-bottom: 1rem; }
+
+
+/* Code
+â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“ */
+code {
+  padding: .2rem .5rem;
+  margin: 0 .2rem;
+  font-size: 90%;
+  white-space: nowrap;
+  background: #F1F1F1;
+  border: 1px solid #E1E1E1;
+  border-radius: 4px; }
+pre > code {
+  display: block;
+  padding: 1rem 1.5rem;
+  white-space: pre; }
+
+
+/* Tables
+â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“ */
+th,
+td {
+  padding: 12px 15px;
+  text-align: left;
+  border-bottom: 1px solid #E1E1E1; }
+th:first-child,
+td:first-child {
+  padding-left: 0; }
+th:last-child,
+td:last-child {
+  padding-right: 0; }
+
+
+/* Spacing
+â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“ */
+button,
+.button {
+  margin-bottom: 1rem; }
+input,
+textarea,
+select,
+fieldset {
+  margin-bottom: 1.5rem; }
+pre,
+blockquote,
+dl,
+figure,
+table,
+p,
+ul,
+ol,
+form {
+  margin-bottom: 2.5rem; }
+
+
+/* Utilities
+â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“ */
+.u-full-width {
+  width: 100%;
+  box-sizing: border-box; }
+.u-max-full-width {
+  max-width: 100%;
+  box-sizing: border-box; }
+.u-pull-right {
+  float: right; }
+.u-pull-left {
+  float: left; }
+
+
 /* Misc
 â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“ */
 hr {
@@ -648,7 +1289,23 @@ there.
 
 /* Larger than Desktop HD */
 @media (min-width: 1200px) {}
-
+.fullStack {
+  text-decoration: underline;
+  text-decoration-color: yellow;
+}
+.mainHeading {
+  font-family: 'Roboto', sans-serif;
+  color: rgb(76,76,76);
+  font-size: 6rem;
+  font-weight: 700;
+  line-height:  8.5rem;
+  transition: box-shadow .25s ease-in;
+  -moz-transition: box-shadow .25s ease-in;
+  -webkit-transition: box-shadow .25s ease-in;
+}
+.mainHeading:hover {
+  box-shadow: 0 12px 65px 2px rgba(41,99,255,0.30), 0 1px 2px 1px rgba(41,99,255,0.09);
+}
 
 
 /*# sourceMappingURL=0.css.map*/
